Change 'b' to 'em' for emphasis in paragraph

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <p>Well when I started this journey of coding I was lost didn't know what to do and because of my marks I was even unsure about coding cause it wasn't good for it as well, but I still went with coding.</p>
       
       <p>I went for coding, because during my time of doubt I found out that I can be a self thought web developer, so I said to myself let me try it out and see if I would like it and I actually do like it even if its currently the most irritating thing in my life since I'm perusing it on a 
-        phone...,OK maybe not the most irritating but it's definitely up there with <b>clash royal</b>.</p>
+        phone...,OK maybe not the most irritating but it's definitely up there with <em>clash royal</em>.</p>
   </body>
 </html>
